--- a/arch/arm/boot/dts/qcom/sdm660-mtp_f7a.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660-mtp_f7a.dtsi
@@ -12,14 +12,16 @@
  */
 
 #include "sdm660-pinctrl.dtsi"
-#include "sdm660-camera-sensor-mtp.dtsi"
-#include "sdm660-novatek-i2c_d2s.dtsi"
+#include "sdm660-camera-sensor-mtp_f7a.dtsi"
+#include "sdm660-novatek-i2c_f7a.dtsi"
+#include "sdm660-synaptics-tcm-i2c_f7a.dtsi"
+//#include "sdm660-smb1355-mtp.dtsi"
 / {
 	mtp_batterydata: qcom,battery-data {
 		qcom,batt-id-range-pct = <15>;
-		#include "fg-gen3-batterydata-l8866sun-3000mah.dtsi"
-		#include "fg-gen3-batterydata-l8866cos-3000mah.dtsi"
-		#include "fg-gen3-batterydata-l8866default-3000mah.dtsi"
+		#include "fg-gen3-batterydata-m6100atl-4000mah.dtsi"
+		#include "fg-gen3-batterydata-m6100sun-4000mah.dtsi"
+		#include "fg-gen3-batterydata-m6100default-4000mah.dtsi"
 	};
 };
 
@@ -138,6 +140,13 @@
 };
 
 &dsi_nt36672a_tianma_fhdplus_video {
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
+	qcom,mdss-dsi-bl-min-level = <1>;
+	qcom,mdss-dsi-bl-max-level = <4095>;
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+};
+
+&dsi_nt36672a_shenchao_fhdplus_video {
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 	qcom,mdss-dsi-bl-min-level = <1>;
 	qcom,mdss-dsi-bl-max-level = <4095>;
@@ -325,14 +334,14 @@
 	qcom,battery-data = <&mtp_batterydata>;
 };
 
-&i2c_2 {
-	status = "ok";
-	smb1351-charger@1d {
-		compatible = "qcom,smb1351-charger";
-		reg = <0x1d>;
-		qcom,parallel-charger;
-		qcom,float-voltage-mv = <4400>;
-		qcom,recharge-mv = <100>;
-		qcom,parallel-en-pin-polarity = <1>;
-	};
-};
+//&i2c_2 {
+//	status = "ok";
+//	smb1351-charger@1d {
+//		compatible = "qcom,smb1351-charger";
+//		reg = <0x1d>;
+//		qcom,parallel-charger;
+//		qcom,float-voltage-mv = <4400>;
+//		qcom,recharge-mv = <100>;
+//		qcom,parallel-en-pin-polarity = <1>;
+//	};
+//};
